Patched LAStools to build shared library

--- a/LASlib/example/Makefile
+++ b/LASlib/example/Makefile
@@ -16,10 +16,10 @@ LASINCLUDE  = -I../../LASzip/src -I../inc
 all: lasexample lasexample_write_only
 
 lasexample: lasexample.o
-	${LINKER} ${BITS} ${COPTS} lasexample.o -llas -o $@ ${LIBS} ${LASLIBS} $(INCLUDE) $(LASINCLUDE)
+	${LINKER} ${BITS} ${COPTS} lasexample.o -llaslib -o $@ ${LIBS} ${LASLIBS} $(INCLUDE) $(LASINCLUDE)
 
 lasexample_write_only: lasexample_write_only.o
-	${LINKER} ${BITS} ${COPTS} lasexample_write_only.o -llas -o $@ ${LIBS} ${LASLIBS} $(INCLUDE) $(LASINCLUDE)
+	${LINKER} ${BITS} ${COPTS} lasexample_write_only.o -llaslib -o $@ ${LIBS} ${LASLIBS} $(INCLUDE) $(LASINCLUDE)
 
 .cpp.o: 
 	${COMPILER} ${BITS} -c ${COPTS} ${INCLUDE} $(LASINCLUDE) $< -o $@
